@@ -1,29 +1,37 @@
 package kr.hhplus.be.server.interfaces.api.order;
 
+
 import kr.hhplus.be.server.application.order.OrderCriteria;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrderRequest {
 
-    public record CreateOrder(
+    public record Order(
             Long userId,
             Long couponId,
             List<OrderProduct> products
     ) {
-        public OrderCriteria.CreateOrder toCriteria() {
-            return OrderCriteria.CreateOrder.builder()
+        public OrderCriteria.Order toCriteria() {
+            return OrderCriteria.Order.builder()
                     .userId(userId)
                     .couponId(couponId)
-                    .products(
-                            products.stream()
-                                    .map(OrderCriteria.OrderProduct::of)
-                                    .collect(Collectors.toList())
-                    )
+                    .products(products.stream()
+                            .map(OrderProduct::toCriteria)
+                            .toList())
                     .build();
         }
     }
 
-    public record OrderProduct(Long productId, int quantity) {}
+    public record OrderProduct(
+            Long productId, 
+            int quantity
+    ) {
+        public OrderCriteria.OrderProduct toCriteria() {
+            return OrderCriteria.OrderProduct.builder()
+                    .productId(productId)
+                    .quantity(quantity)
+                    .build();
+        }
+    }
 }
